docker model now returns warnings if the audio has issue (e.g. Gen 2:19 w/ the Jesus narrator-Pawan voice loses the initial क्या होया था  phrase.
